--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 <h1>
     <center>Dashboard</center>
 </h1>
+<span><center>Если пользователи не отображаются, значит превышен лимит запросов к github.</center></span>
 
 <%= if users == [] do %>
 <form action="/">
@@ -29,7 +30,8 @@
 </style>
 <table>
     <thead>
-    <th>#</th>
+    <th>Avatar</th>
+    <th>ID</th>
     <th>Login</th>
     <th>Public Repo</th>
     <th>Use Lang</th>
@@ -37,8 +39,9 @@
     <tbody>
     <%= for user <- users do %>
     <tr>
+        <td><img src="<%= user.avatar %>" alt="Avatar" style="max-width: 100px;"></td>
         <td><%= user.id %></td>
-        <td><%= user.login %></td>
+        <td><a href="<%= user.url %>"><%= user.login %></a></td>
         <td>
             <%= for link <- user.links do %>
             <a href="<%= link %>" target="_blank">
@@ -46,7 +49,11 @@
             </a><br/>
             <% end %>
         </td>
-        <td><%= user.langs %></td>
+        <td>
+            <%= for lang <- user.langs do %>
+            <%= lang %>
+            <% end %>
+        </td>
     </tr>
     <% end %>
     </tbody>
